@@ -21,6 +21,7 @@ import com.carrotsearch.randomizedtesting.RandomizedRunner;
 import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.List;
 import java.util.Locale;
 import java.util.Random;
 import java.util.Set;
@@ -31,6 +32,7 @@ import java.util.concurrent.Executors;
 import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
+import org.apache.lucene.tests.util.LuceneTestCase;
 import org.apache.lucene.util.NamedThreadFactory;
 import org.junit.Assert;
 import org.junit.Test;
@@ -60,18 +62,13 @@ public class TestCodecLoadingDeadlock extends Assert {
     System.out.println(
         String.format(Locale.ROOT, "codec: %s, pf: %s, dvf: %s", codecName, pfName, dvfName));
 
+    List<String> args = new ArrayList<>();
+    args.add(Paths.get(System.getProperty("java.home"), "bin", "java").toString());
+    args.addAll(LuceneTestCase.getJvmForkArguments());
+    args.addAll(List.of(getClass().getName(), codecName, pfName, dvfName));
+
     // Fork a separate JVM to reinitialize classes.
-    final Process p =
-        new ProcessBuilder(
-                Paths.get(System.getProperty("java.home"), "bin", "java").toString(),
-                "-cp",
-                System.getProperty("java.class.path"),
-                getClass().getName(),
-                codecName,
-                pfName,
-                dvfName)
-            .inheritIO()
-            .start();
+    final Process p = new ProcessBuilder(args).inheritIO().start();
     if (p.waitFor(MAX_TIME_SECONDS * 2, TimeUnit.SECONDS)) {
       assertEquals("Process died abnormally?", 0, p.waitFor());
     } else {
